text and background contrast fix

--- a/app/components/Projects/style.css
+++ b/app/components/Projects/style.css
@@ -28,6 +28,10 @@
     &:before {
       opacity: 1;
     }
+
+    .text-gray-400 {
+      color: #666;
+    }
   }
 
   &:before {
